; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_OpenOutput.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_OpenOutput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i8*, i8* }
%struct.TYPE_6__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@OutFile = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"Cannot create '%s'\00", align 1
@ErrorHandler = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@Compressor = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@my_error_exit = common dso_local global i8* null, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @OpenOutput to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenOutput(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32* @fopen(i8* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** @OutFile, align 8
  %5 = load i32*, i32** @OutFile, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @FatalError(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = call i32 @jpeg_std_error(%struct.TYPE_7__* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ErrorHandler, i32 0, i32 0))
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @Compressor, i32 0, i32 2), align 4
  %12 = load i8*, i8** @my_error_exit, align 8
  store i8* %12, i8** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ErrorHandler, i32 0, i32 0, i32 1), align 8
  %13 = load i8*, i8** @my_error_exit, align 8
  store i8* %13, i8** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ErrorHandler, i32 0, i32 0, i32 0), align 8
  store i32 4, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @Compressor, i32 0, i32 1), align 4
  store i32 4, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @Compressor, i32 0, i32 0), align 4
  %14 = call i32 @jpeg_create_compress(%struct.TYPE_6__* @Compressor)
  %15 = load i32*, i32** @OutFile, align 8
  %16 = call i32 @jpeg_stdio_dest(%struct.TYPE_6__* @Compressor, i32* %15)
  %17 = load i32, i32* @TRUE, align 4
  ret i32 %17
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @FatalError(i8*, i8*) #1

declare dso_local i32 @jpeg_std_error(%struct.TYPE_7__*) #1

declare dso_local i32 @jpeg_create_compress(%struct.TYPE_6__*) #1

declare dso_local i32 @jpeg_stdio_dest(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
